<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_film_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:descendantFocusability="blocksDescendants"
        android:padding="16dp">

        <ProgressBar
            android:id="@+id/detail_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/img_poster"
            app:layout_constraintBottom_toTopOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.85"
            app:layout_constraintHorizontal_bias="0.6"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:backgroundTint="@color/white"
            app:tint="?attr/colorPrimary"
            android:translationZ="5dp"
            tools:ignore="ContentDescription" />


        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster"
            tools:text="@string/type" />

        <TextView
            android:id="@+id/tv_separator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="14sp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            app:layout_constraintTop_toTopOf="@id/tv_type"
            app:layout_constraintStart_toEndOf="@id/tv_type"
            android:text="@string/separator" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/tv_separator1"
            app:layout_constraintStart_toEndOf="@id/tv_separator1"
            tools:text="@string/release_date" />

        <TextView
            android:id="@+id/tv_separator2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="14sp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            app:layout_constraintTop_toTopOf="@id/tv_release_date"
            app:layout_constraintStart_toEndOf="@id/tv_release_date"
            android:text="@string/separator" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/tv_separator2"
            app:layout_constraintStart_toEndOf="@id/tv_separator2"
            tools:text="@string/duration" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_type"
            app:layout_constraintTop_toBottomOf="@+id/tv_type"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_user_score"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:gravity="center"
            android:background="@drawable/ic_outline_circle_24"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/user_score"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintHorizontal_bias="0"/>
        <TextView
            android:id="@+id/tv_user_score_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="start|bottom"
            android:text="@string/user_score_label"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tv_user_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_user_score"
            app:layout_constraintBottom_toTopOf="@id/tv_user_count"/>
        <TextView
            android:id="@+id/tv_user_count"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="start|top"
            android:text="@string/user_count"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tv_user_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_score_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_user_score"/>
        <TextView
            android:id="@+id/tv_user_count_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="start|top"
            android:text="@string/user_count_label"
            android:layout_marginStart="5dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tv_user_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_user_count"
            app:layout_constraintBottom_toBottomOf="@id/tv_user_count"/>

        <TextView
            android:id="@+id/tv_genres_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/genres_label"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_score" />

        <TextView
            android:id="@+id/tv_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_genres_label"
            tools:text="@string/genres" />

        <TextView
            android:id="@+id/tv_overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overview_label"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_genres" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_label"
            tools:text="@string/overview" />

        <TextView
            android:id="@+id/tv_status_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/status_label"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_status_label"
            tools:text="@string/status" />

        <TextView
            android:id="@+id/tv_language_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/original_language_label"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_status" />
        <TextView
            android:id="@+id/tv_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_language_label"
            tools:text="@string/original_language" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
